# ChangeLog for sys-devel/gcc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.871 2012/04/28 00:57:23 dirtyepic Exp $

  04 May 2012; Fabian Groffen <grobian@gentoo.org>
  +files/solaris-i386-ld-emulation-4.2.patch, gcc-4.2.4-r01.4.ebuild:
  Backport GNU ld 2.22 breakage patch to 4.2.2 since we need to bootstrap with
  that GCC

*gcc-4.6.3 (28 Apr 2012)

  28 Apr 2012; Ryan Hill <dirtyepic@gentoo.org> +gcc-4.6.3.ebuild,
  metadata.xml:
  Version bump (bug #406571).

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> gcc-4.5.3-r2.ebuild:
  keyword ~amd64-fbsd

  15 Apr 2012; Mike Frysinger <vapier@gentoo.org> gcc-4.5.3-r2.ebuild:
  Fix from upstream for building gcj with glibc-2.15+.

  28 Mar 2012; Markus Meier <maekke@gentoo.org> gcc-4.3.6-r1.ebuild:
  arm stable, bug #405845

*gcc-4.4.7 (27 Mar 2012)

  27 Mar 2012; Mike Frysinger <vapier@gentoo.org> +gcc-4.4.7.ebuild:
  Version bump #409033 by Mr. Anderson.

  15 Mar 2012; Markus Meier <maekke@gentoo.org> gcc-4.4.6-r1.ebuild:
  arm stable, bug #405849

  15 Mar 2012; Mike Frysinger <vapier@gentoo.org> gcc-4.6.0.ebuild,
  gcc-4.6.1-r1.ebuild, gcc-4.6.2.ebuild:
  Drop gcc-config dep now that the toolchain.eclass forces it.

  10 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> gcc-4.4.6-r1.ebuild:
  x86 stable wrt bug #405849

  09 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> gcc-4.3.6-r1.ebuild:
  x86 stable wrt bug #405845

  03 Mar 2012; Brent Baude <ranger@gentoo.org> gcc-4.5.3-r2.ebuild:
  Marking gcc-4.5.3-r2 ppc64 for bug 402847

  02 Mar 2012; Brent Baude <ranger@gentoo.org> gcc-4.4.6-r1.ebuild:
  Marking gcc-4.4.6-r1 ppc64 for bug 405849

  02 Mar 2012; Brent Baude <ranger@gentoo.org> gcc-4.3.6-r1.ebuild:
  Marking gcc-4.3.6-r1 ppc64 for bug 405845

  29 Feb 2012; Markus Meier <maekke@gentoo.org> gcc-4.5.3-r2.ebuild:
  arm stable, bug #402847

  29 Feb 2012; Brent Baude <ranger@gentoo.org> gcc-4.5.3-r2.ebuild: