@@ -29,10 +29,10 @@ AUX 4.2.2/interix-x86.patch.bz2 8885 RMD160 a01e3086336c3e752db3c251d8280ea52924
 AUX 4.2.2/pr26189-pa.patch 856 RMD160 627df38d5c9f39b295a183e09b7af8bd7c1a9df7 SHA1 12a3d3df7a6cfb8945a506d5bc8ea960e1c59e14 SHA256 defac911eb23b854f3e66e36b9469d0426f20952f858d06ba8f4d15422942149
 AUX 4.2.2/pr31899.patch 2150 RMD160 2e8791c3adbfa37dea9da04deccc3879b3f25f24 SHA1 42d36bf58937f948612c4dd99ad57ef8a1a2db4e SHA256 b6a18313653d2cd3ac9fe12876c93da8b7f0f97ba2e12b90d2d78b2e6b549b54
 AUX 4.2.2/prefix-search-dirs.patch 1973 RMD160 4380df8cb7250f4fae9362d407e61ff5a92bd37e SHA1 5325f99c53406a16b4180c238b03178db2e5ce6a SHA256 658855e8f6b2314ad0cbcb59877ee88be1e0b54ab8a3c542c4fa9c70ab361f25
-AUX 4.2.2/solarisx86_64.patch 2893 RMD160 44facf6cfff027c2ba7438242f9a3b197ea43c4d SHA1 d6b2f05de86dc7d37b8163722c8440496e355f8c SHA256 3a7f539427e8006603c226ec5b3366b3f2a34da6bb113ab35a8fa994758288fa
+AUX 4.2.2/solarisx86_64.patch 2891 RMD160 30914bf84a42ca685d06749b39c4ffe4e143ba2b SHA1 b714244b4656d5deebdbbcfcffc4623da6ec70e4 SHA256 618661e198775fa49486dc06f0dd728b0c753e3a4e0350f39c7956db1b3e7b63
 AUX 4.2.2/targettools-checks.patch 4078 RMD160 ff0cd99561eaece9229d7dacc5278a20fb6f48dd SHA1 ddb572bb4c967791786ba0364c06ff85617b3c93 SHA256 958325d291250fbc42d0ee257b215da094ec2c6513920b66302f2b3252ebe09c
 AUX 4.2.2/treelang-nomakeinfo.patch 514 RMD160 54d5ff076bd21209d64db6dcc5cb146d27a0d2bd SHA1 adc4a27d82c1f9cecdcd00fe169887357d33ff29 SHA256 185b88b81d2358603df224e50a5f98ead61e9786823b8d0aa1fefd34859256e0
-AUX 4.3.0/solarisx86_64.patch 3134 RMD160 0676bc755035a15efbdd6aa730fceefa3ce64a57 SHA1 31e73c6beb2b3fc98bbec953c4b2c2d44a8bff3f SHA256 86803ab3a230cf5db59058657a02a32eb2e869f690deaca256fe9fe9ff479705
+AUX 4.3.0/solarisx86_64.patch 3132 RMD160 effc55212ad77e69cd4e54c5ff489fff74aa738b SHA1 6d7cc3a1460dd83d28a35bd1b60f1c44825273fc SHA256 6955a4705c0403077d766f7212af02c24e17f6cfbb900b5d3000a7b1f999dc5c
 AUX 4.3.0/targettools-checks.patch 3377 RMD160 97f2f4cf990a70a611670d173b7a78a7ed1513f3 SHA1 b9e9ccfd871f5d527e47c859124287543b8c5018 SHA256 44da888802657665fb5b0be69dba2a3836249e4a68db424d64fc3961343a4fb6
 AUX 4.3.0/treelang-nomakeinfo.patch 1099 RMD160 0f42d583bf81d1b3b0b7293c70c846660cc023f0 SHA1 437a676ab3c01bdb28aefa08fe24943fc98d59f4 SHA256 eefa97043ea1b7a6e73f005906f5ca5efe832cb4d882465912a6ace6c664cd9c
 AUX 4.3.2/gcc-4.3.2-mint1.patch 719776 RMD160 46cb9603daedd64f9c624a9500da5edc548465a8 SHA1 17b2f517ad8abdc5ade6119b82b0039134211523 SHA256 707f2daffbfeb0946a85f099d0c80bd810a459393c54b717089f3173befe028f
@@ -43,9 +43,9 @@ AUX 4.3.3/aix-force-pthread.patch 12083 RMD160 bd2e579bcd2c9e15cffea2bb189f78ae6
 AUX 4.3.3/darwin-libgcc_s-installname.patch 639 RMD160 4aaf8b668190894e2bc3a2d072ca389c03771cb8 SHA1 efe7002ce41053eae60434a5d2cb0d917824c586 SHA256 6bc88bb2919ab20bb880084ace639d02a8dfd77325c5f78a683aa17ba438d054
 AUX 4.3.3/gcc-4.3.3-redundant-linkage.patch 870 RMD160 006db0f47942cbf4f5a935309c11ad984491b983 SHA1 ecb7a7550d7e22eb4826efb3d49f30f0190f262d SHA256 5093c8900fa7c360d1626ea658729419bb7d855a6199c98911f93c7f1bbab999
 AUX 4.3.3/prefix-search-dirs.patch 2131 RMD160 ed911d38cd1857c9993724e3b84d58f12ae90c54 SHA1 1174736a9a2f51eb0c8f7017882fc59975b8b716 SHA256 8010c612e3e2c7c376e713d4201bcca3a24871acf7246ab02ba08a74ba12ee76
-AUX 4.3.3/solarisx86_64.patch 3691 RMD160 e059d772cb7b8a14272ce19fa9b0f98b3129fbde SHA1 bc63515d5a2c90560edc2886fe283b783b7fdd2d SHA256 9eacd845493622be9ab2df63b7cc491d8eeb4881036150a8ade84e8c44b26b53
+AUX 4.3.3/solarisx86_64.patch 3689 RMD160 b8a3301efba99a39fa34ae03fe27002ca90ef09f SHA1 a2a7c9b94dc7b37bb4f83fbb48a6a3d995ddf94f SHA256 57082ef18f93de29d53cfc504672d646024002f1c0671128e9668bf04745b341
 AUX 4.4.0/gcc-4.4.0-softfloat.patch 2833 RMD160 3f6d8e13047cca3b3e5ede47e79d996f59290fbd SHA1 a72b456736485821d3579dd455941d3379af0057 SHA256 ddb7b8d9770f64a32096a32c4f5ad2571ffcafe617991b492e7eee823878c4fc
-AUX 4.4.0/gcc-4.4.1-solaris-x86_64.patch 3630 RMD160 1e298ee0b85afcb0e4d9df561b2b9fbeedbaec6b SHA1 f25c31361c2032f26447a62898472b628501a300 SHA256 e147153edec4fc19b5757d5c9b88aefc3db180dba462b7a10f70c79df1828480
+AUX 4.4.0/gcc-4.4.1-solaris-x86_64.patch 3628 RMD160 8f7d890be3380b2685fcb93523e1fb31fa9314cd SHA1 1f8efc4e50917f3d2672177994735b362bfae315 SHA256 86cdfc2f63852641246d0ded6a3227f9d97213a0af97534e33718e63277426a3
 AUX 4.4.1/gcc-4.4.1-T-namespace.patch 3046 RMD160 9333d4629dd9da44a02a4a532a21a230dcbb99d3 SHA1 68cd04ac0da342173c954635bcf7dac3f53401a5 SHA256 9d950ca2053c16c3e18b5723b91464dfa6427309546c09e4a2c5662343139a0b
 AUX 4.4.1/gcc-4.4.1-mint1.patch 718791 RMD160 c9a5fdd59d34a10094e13b07f1b1c39a95d17d21 SHA1 b9303611f73d2c523508652f6f647d2713cf2d11 SHA256 8eebfe8dd129bc8ac21f1292017a2baaea5f842e2f279779a7d514d1db4b9c3b
 AUX 4.4.1/gcc-4.4.1-mint2.patch 1047 RMD160 41db47133bd17abd5a851659204144aa77eb2035 SHA1 18bb282f4b0f14fb4a7d1c3658f48b6124f93b97 SHA256 f2a8cfb6abd363a3528673fdf8206c6f8e1dd9bd5fdcf95bdb490e7469b7b338
@@ -55,7 +55,7 @@ AUX 4.4.4/gcc-4.4.4-T-namespace.patch 5034 RMD160 3d9fd92a567a83b0cbfdaf7334a512
 AUX 4.5.1/aix-force-pthread.patch 10775 RMD160 656103f26a149fb4364769538bcf0026441b95d4 SHA1 2679ec224792a96c70b9d03adc7ebf3433d5a8f9 SHA256 6cd3337bed445691e415a4e720950ce0f4286c15731c024d1186bf750afa2929
 AUX 4.5.1/gcc-4.5.1-mint1.patch 1101 RMD160 7ebd9d3b7ece61822495ce4300748b504d3fc1f0 SHA1 8a66965a5f84c220e865c4d5335b5b856f939ef3 SHA256 8ad6464e29e85bfe09c7d5b1d50eea485d0f81ca9b8e1894cb84fb6f2f6d2c30
 AUX 4.5.1/ia64-hpux-always-pthread.patch 900 RMD160 ebf2357f031fd2b63973456e754d87c75665ebf4 SHA1 700c03f89c9442da1ebd2fd3a0ce368593b79801 SHA256 f5116383928e93af9b9f3349c568b96b0d3d58b3d4f8d6a4260f49c1bd181e2a
-AUX 4.5.1/solaris-x86_64.patch 3619 RMD160 38fa4983d2f9e4f52312cdb290aa318b2bbdea53 SHA1 aa6e5c59f9eafd527d9a32d9d4a917bd231c0ddf SHA256 3412f6ca7c729f1f8a56886ed1a7d8d7df7ffc425c61356019af3b1e003ed430
+AUX 4.5.1/solaris-x86_64.patch 3617 RMD160 d3f6067fbdc5d69d1d280857e3e703ea8ce8642b SHA1 61d1c46adcc6e29f5244e524c6969cd8269d93af SHA256 7cbdc36ea689ae18ddb928e507013c213cedc52d035a42c399ead367787f77c0
 AUX 4.5.2/gcc-4.5.2-mint1.patch 10026 RMD160 676a39416c5036cf1afe8a717f66fd17c68d6b0d SHA1 cf4947ab357a2755c19ebbc68ed518f34ee53e08 SHA256 d06beeedf6cdb88efb213afc2c72e1574b568fd88f3fde17dfac46a4f9c0d4ee
 AUX 4.5.2/gcc-4.5.2-mint2.patch 36523 RMD160 4c82b07226246d639d839148333464e94a6020ef SHA1 1ac20415aa8f08a8e6fbd7f1650870cd0335e288 SHA256 b15287848cc3be4f0f707eac38c4bfb0bf1dc86880df1e88ed62caba0342f07d
 AUX 4.5.2/m68k-coldfire.patch 1941 RMD160 8aa4ecaad6c01faf537a565bfafcbba3059a19ad SHA1 c1d1b55295c7116bd7cec51ed52e481d202f5fac SHA256 432ad990a5667882002ec3299abdc5eacf1bd6b93adbe631956cc9d602b2df79
@@ -164,12 +164,12 @@ EBUILD gcc-4.5.3-r2.ebuild 7313 RMD160 b54dfa28c4b26fd0f3ff76e24538a8dfc3be1b46 
 EBUILD gcc-4.6.1-r1.ebuild 7088 RMD160 1f22b5cda6d19ab6c3cc6c773751d44837706d73 SHA1 1b10ae1d9d4aecf6843aa4582521b18329a2fee4 SHA256 d922fc641d3a176e5f705c592c24e044cd57f63e1ce0adb64a22ba68b6510985
 EBUILD gcc-4.6.2.ebuild 7240 RMD160 894c5ee89bc4180d6f7b71efebd66f600601cb5d SHA1 7e5e74c22043af859691e15d064dcca3392cf8de SHA256 2a033b666df57d1fa666a76b4c02d809ab66d742bfd2cc0c071e197fb3eadf92
 EBUILD gcc-4.6.3.ebuild 7243 RMD160 31cdd1637773d66f3f511fee8a8bcd36b4305b60 SHA1 e4246bbd69128e47e751226911b224467e20266c SHA256 64e8db0c283890bc7d9fa5f097d1fc3df3b3d6a169279705d8b108cd99ff300b
-MISC ChangeLog 151992 RMD160 94d6ce2c3ea2289e8c4fef2fb2378d7e09ac34f8 SHA1 9bf62f6f729036b871fd2580f9fce5ca219dd1db SHA256 842191eecfc428ff4505db412370ade7c5fac50de48dcb71b6d6a5b05c6d4682
+MISC ChangeLog 152380 RMD160 eec27dbbef8bca3218813e482a5bd7859976e015 SHA1 a99816b699bb5fc06cb619e3bcf032ef2f40c6e0 SHA256 9014955b883bd2166da8ade815c1b8b2a02da6c3d3ec0a5c6f29eb1f6047840f
 MISC metadata.xml 2017 RMD160 def531c42aa4d5cba94dcab8664d46f17791cb22 SHA1 a57fb26695634a23cd94b1a3a192efb8db03ed55 SHA256 b8397e7ce9649b9086d020ee865f1ccd616b338cdae5be3d57494fd15748d132
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (Darwin)
 
-iEYEARECAAYFAk+kFN0ACgkQX3X2B8XHTolA3gCgnFieQCSIQfdcA9P/oC8zbV7K
-S/8AnjFU5UQe+pjWHdA7wOQhbhtT1Odb
-=S19D
+iEYEARECAAYFAk+kH1UACgkQX3X2B8XHTomKHACffXhY2SAFxlOGU4aJi2XiPi9s
+y3wAoJ2E5aLNkhxRUS1NTTVwE35Vo72W
+=IL0i
 -----END PGP SIGNATURE-----
