@@ -3,6 +3,13 @@
 # $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.871 2012/04/28 00:57:23 dirtyepic Exp $
 
   04 May 2012; Fabian Groffen <grobian@gentoo.org>
+  files/4.2.2/solarisx86_64.patch, files/4.3.0/solarisx86_64.patch,
+  files/4.3.3/solarisx86_64.patch, files/4.4.0/gcc-4.4.1-solaris-x86_64.patch,
+  files/4.5.1/solaris-x86_64.patch:
+  Fix Solaris GNU ld 2.22 problem not only for 32-bits x86, but also for 64-bits
+  by not explicitly passing the target onto the linker if not requested
+
+  04 May 2012; Fabian Groffen <grobian@gentoo.org>
   +files/solaris-i386-ld-emulation-4.2.patch, gcc-4.2.4-r01.4.ebuild:
   Backport GNU ld 2.22 breakage patch to 4.2.2 since we need to bootstrap with
   that GCC
